--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
 
-    <body onload="loadExternalContent()">
+    <body onload="loadExternalContent()" id="body">
         
     </body>
 
