--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-        <script src="scripts/pageLoader.js"></script>
-        <link rel="stylesheet" href="palette.css">
+        <script src="res/scripts/pageLoader.js"></script>
+        <link rel="stylesheet" href="res/css/palette.css">
+        <link rel="stylesheet" href="res/css/style.css">
         <meta charset="utf-8">
 
     </head>
 
 
-    <body onload="loadExternalContent()" id="body">
+
+    <body class="bg-plt-main-color-2">
+
+    <div class="position-absolute top-50 start-50 translate-middle">
+        <h1 class="text-center plt-text-color">Ooops . . .</h1>
+        <h3 class="text-center plt-dark-color">My website is still under construction</h3>
+        <h5 class="text-center plt-dark-color">come back later !</h5>
+    </div>
         
     </body>
 
