--- a/index.html
+++ b/index.html
@@ -13,13 +13,33 @@
 
 
 
-    <body class="bg-plt-main-color-2">
+    <body class="bg-plt-main-color">
 
-    <div class="position-absolute top-50 start-50 translate-middle">
-        <h1 class="text-center plt-text-color">Ooops . . .</h1>
-        <h3 class="text-center plt-dark-color">My website is still under construction</h3>
-        <h5 class="text-center plt-dark-color">come back later !</h5>
-    </div>
+    <header class="bg-plt-main-color-2 pt-3 row">
+        <div class=" container row">
+
+                <div class="col-md-1 text-center">
+                    language
+                </div>
+                <div class="row col-md-10 d-flex justify-content-between">
+                    <div class="col-md-3 navbar-button pb-2">
+                        <h3 class="text-center plt-text-color">CV</h3>
+                        <div class="navbar-bar"></div>
+                    </div>
+                    <div class="col-md-3 navbar-button pb-2">
+                        <h3 class="text-center plt-text-color">Projects</h3>
+                        <div class="navbar-bar"></div>
+                    </div>
+                    <div class="col-md-3 navbar-button pb-2 align-content-center">
+                        <h3 class="text-center plt-text-color">CV</h3>
+                        <div class="navbar-bar"></div>
+                    </div>
+                </div>
+
+        </div>
+    </header>
+
+    <img src="./res/images/kilian2.jpg" alt="" class="position-absolute top-50 start-50 translate-middle" style="zoom:20%; border-radius: 1000px; box-shadow: #00ff04">
         
     </body>
 
