Ajout de ressources

--- a/index.html
+++ b/index.html
@@ -16,21 +16,22 @@
     <body class="bg-plt-main-color">
 
     <header class="bg-plt-main-color-2 pt-3 row">
-        <div class=" container row">
+        <div class=" container row d-flex">
 
-                <div class="col-md-1 text-center">
-                    language
-                </div>
-                <div class="row col-md-10 d-flex justify-content-between">
-                    <div class="col-md-3 navbar-button pb-2">
+            <div class="col-md-1" style=>
+                <img id="flagLangue" src="./res/images/frenchFlag.png" class="ms-2 mb-2" alt="">
+            </div>
+
+                <div class="row col-md-11 d-flex justify-content-between">
+                    <div class="navbar-button pb-2" style="width: calc(100%/3);">
                         <h3 class="text-center plt-text-color">CV</h3>
                         <div class="navbar-bar"></div>
                     </div>
-                    <div class="col-md-3 navbar-button pb-2">
+                    <div class="navbar-button pb-2" style="width: calc(100%/3);">
                         <h3 class="text-center plt-text-color">Projects</h3>
                         <div class="navbar-bar"></div>
                     </div>
-                    <div class="col-md-3 navbar-button pb-2 align-content-center">
+                    <div class="navbar-button pb-2 " style="width: calc(100%/3);">
                         <h3 class="text-center plt-text-color">CV</h3>
                         <div class="navbar-bar"></div>
                     </div>
@@ -39,7 +40,7 @@
         </div>
     </header>
 
-    <img src="./res/images/kilian2.jpg" alt="" class="position-absolute top-50 start-50 translate-middle" style="zoom:20%; border-radius: 1000px; box-shadow: #00ff04">
+    <img id="maphoto" src="./res/images/kilian2.jpg" alt="">
         
     </body>
 
